# raincoat-takehome-science

./: .pre-commit-config.yaml  README.md  SOLUTION.md  pyproject.toml  requirements.txt  setup.cfg
docs/: quick_start.md
src/raincoat_takehome_science/: ERA_ESACCI_SM_merge.py  ERA_data_preprocessing.py  download_ERA_data.py
