[metadata]
name = raincoat-takehome-science
summary = Raincoat Takehome for Science team
author = Raincoat Insurance, Inc.
author_email = support@teamraincoat.com
home_page = https://teamraincoat.com
description_file = README.md
keywords = raincoat takehome science

[options]
package_dir =
  =src
packages = find_namespace:
include_package_data = True

# dependency_links =
install_requires =
  ipython
  matplotlib
  xarray
  numpy
  click

[options.extras_require]
dev =
  pytest
  pytest-cov
  pytest-benchmark
  pre-commit
  wheel
  isort
  black

all =
  %(dev)s


[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;  raincoat-takehome = raincoat_takehome_science.cli:main


[tool:pytest]
# --numprocesses=auto
addopts = -ra --quiet --color=no
python_files = test_*.py *_test.py tests/*.py
python_functions = test_* *_test
markers =
  slow: slow marker
